# torch2trt

./: CMakeLists.txt
plugins/src/: multiscaleDeformableAttn.cu  multiscaleDeformableAttn.h  multiscaleDeformableAttnPlugin.cu  multiscaleDeformableAttnPlugin.h  multiscaleDeformableIm2ColCuda.cuh
